Issue #17051: Fix a memory leak in os.path.isdir() on Windows. Patch by Robert Xiao.